crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/BreakStatement/error_recovery/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Identifier. One of Semicolon was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/BreakStatement/error_recovery/input.sol:6:7]
   │
 6 │ break invalid ;
   │       ───┬───  
   │          ╰───── Error occurred here.
───╯
